<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_marginRight="34dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_info"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/textInfo"
            android:textSize="12dp" />

        <Button
            android:id="@+id/btn_setup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/btnSetup" />

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btnConnect" />

        <Button
            android:id="@+id/btn_collect"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="37dp"
            android:layout_weight="0.11"
            android:text="@string/btnListen" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/btnClose" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="54dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_messages"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="36dp"
            android:text="@string/textMessage"
            android:textSize="18dp" />
    </LinearLayout>

</RelativeLayout>
